--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,4 +1,4 @@
-.card-container {
+.card-data {
   border:  2px solid black;
   width:  25rem;
   height: 25rem;
@@ -12,3 +12,9 @@
   padding-top:  5rem;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
